force-app/main/default/objects/MetadataRequestCache__c/MetadataRequestCache__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the status of metadata requests</description>
    <label>Metadata Request Cache</label>
</CustomObject>