force-app/main/default/objects/MetadataRequestCache__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>