force-app/main/default/objects/MetadataRequestCache__c/fields/IsComplete__c.field-meta.xml
<CustomField>
    <fullName>IsComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>