force-app/main/default/objects/MetadataRequestCache__c/fields/WasSuccessful__c.field-meta.xml
<CustomField>
    <fullName>WasSuccessful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Successful</label>
    <type>Checkbox</type>
</CustomField>